Bug 400258 - Use the padding edge as the origin for offsetLeft/offsetTop also for box-sizing:border-box boxes.  r=emilio

This is what the spec says and is compatible with other UAs.
https://drafts.csswg.org/cssom-view/#dom-htmlelement-offsetleft

Differential Revision: https://phabricator.services.mozilla.com/D45621

--HG--
extra : moz-landing-system : lando